--- a/FilmsAPI.csproj
+++ b/FilmsAPI.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="dotenv.net" Version="3.1.3" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="8.0.1" />
@@ -26,6 +27,19 @@
     <Compile Remove="Controllers\CategoryController.cs" />
     <Compile Remove="Models\Category.cs" />
     <Compile Remove="Models\CategoryFilms.cs" />
+    <Compile Remove="Infra\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Remove="Infra\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Remove="Infra\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="Infra\**" />
   </ItemGroup>
 
 </Project>
