--- a/FilmsAPI.csproj
+++ b/FilmsAPI.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <None Remove="Infra\**" />
     <None Remove="Handles\**" />
+    <None Remove="Dockerfile" />
   </ItemGroup>
 
 </Project>
